fixed syntax issue

--- a/app/views/layouts/posts/show.html.erb
+++ b/app/views/layouts/posts/show.html.erb
@@ -1,4 +1,6 @@
-<h1> <%= @post.title %> </h1>
-<p> <%= @post.description %> </p>
+<h1><%= @post.title%> </h1>
+<p><%= @post.description%> </p>
 
 
+
+<%# ctrl+shift+` %>
